--- a/GrpcBase.CLI/GrpcBase.CLI.csproj
+++ b/GrpcBase.CLI/GrpcBase.CLI.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DidiSoft.OpenSsl" Version="1.4.3.18" />
         <PackageReference Include="Google.Protobuf" Version="3.17.3" />
         <PackageReference Include="Grpc.Net.Client" Version="2.38.0" />
         <PackageReference Include="Grpc.Tools" Version="2.38.1">
