--- a/GrpcBase.Service/GrpcBase.Service.csproj
+++ b/GrpcBase.Service/GrpcBase.Service.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DidiSoft.OpenSsl" Version="1.4.3.18" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
