Added authentication grpc

--- a/GrpcBase.CLI/GrpcBase.CLI.csproj
+++ b/GrpcBase.CLI/GrpcBase.CLI.csproj
@@ -21,6 +21,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\SteelCloudLLC\SteelCloudUtilities\SteelCloud.FilesAndFolders\SteelCloud.FilesAndFolders.csproj" />
+      <ProjectReference Include="..\GrpcBase.Common\GrpcBase.Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="EncryptionEngine.cs" />
     </ItemGroup>
 
 </Project>
